Refactor tests for the rescorer builder.