@@ -8,12 +8,12 @@
 package org.elasticsearch.xpack.ml.inference.ltr;
 
 import org.elasticsearch.TransportVersion;
-import org.elasticsearch.common.ParsingException;
 import org.elasticsearch.common.io.stream.NamedWriteableRegistry;
 import org.elasticsearch.common.io.stream.Writeable;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.core.Tuple;
 import org.elasticsearch.search.SearchModule;
+import org.elasticsearch.search.rescore.RescorerBuilder;
 import org.elasticsearch.xcontent.NamedXContentRegistry;
 import org.elasticsearch.xcontent.XContentParser;
 import org.elasticsearch.xcontent.XContentType;
@@ -25,14 +25,11 @@ import org.elasticsearch.xpack.ml.inference.loadingservice.LocalModel;
 
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
-import static org.elasticsearch.search.rank.RankBuilder.WINDOW_SIZE_FIELD;
 import static org.elasticsearch.xpack.core.ml.inference.trainedmodel.LearningToRankConfigTests.randomLearningToRankConfig;
 import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.when;
 
 public class LearningToRankRescorerBuilderSerializationTests extends AbstractBWCSerializationTestCase<LearningToRankRescorerBuilder> {
 
@@ -40,33 +37,7 @@ public class LearningToRankRescorerBuilderSerializationTests extends AbstractBWC
 
     @Override
     protected LearningToRankRescorerBuilder doParseInstance(XContentParser parser) throws IOException {
-        String fieldName = null;
-        LearningToRankRescorerBuilder rescorer = null;
-        Integer windowSize = null;
-        XContentParser.Token token = parser.nextToken();
-        assert token == XContentParser.Token.START_OBJECT;
-        while ((token = parser.nextToken()) != XContentParser.Token.END_OBJECT) {
-            if (token == XContentParser.Token.FIELD_NAME) {
-                fieldName = parser.currentName();
-            } else if (token.isValue()) {
-                if (WINDOW_SIZE_FIELD.match(fieldName, parser.getDeprecationHandler())) {
-                    windowSize = parser.intValue();
-                } else {
-                    throw new ParsingException(parser.getTokenLocation(), "rescore doesn't support [" + fieldName + "]");
-                }
-            } else if (token == XContentParser.Token.START_OBJECT) {
-                rescorer = LearningToRankRescorerBuilder.fromXContent(parser, learningToRankService);
-            } else {
-                throw new ParsingException(parser.getTokenLocation(), "unexpected token [" + token + "] after [" + fieldName + "]");
-            }
-        }
-        if (rescorer == null) {
-            throw new ParsingException(parser.getTokenLocation(), "missing rescore type");
-        }
-        if (windowSize != null) {
-            rescorer.windowSize(windowSize);
-        }
-        return rescorer;
+        return (LearningToRankRescorerBuilder) RescorerBuilder.parseFromXContent(parser, (r) -> {});
     }
 
     @Override
@@ -169,16 +140,13 @@ public class LearningToRankRescorerBuilderSerializationTests extends AbstractBWC
         List<NamedXContentRegistry.Entry> namedXContent = new ArrayList<>();
         namedXContent.addAll(new MlInferenceNamedXContentProvider().getNamedXContentParsers());
         namedXContent.addAll(new MlLTRNamedXContentProvider().getNamedXContentParsers());
-        namedXContent.addAll(new SearchModule(Settings.EMPTY, Collections.emptyList()).getNamedXContents());
+        namedXContent.addAll(new SearchModule(Settings.EMPTY, List.of()).getNamedXContents());
+        namedXContent.add(new NamedXContentRegistry.Entry(
+            RescorerBuilder.class,
+            LearningToRankRescorerBuilder.NAME,
+            (p, c) -> LearningToRankRescorerBuilder.fromXContent(p, learningToRankService)
+        ));
         return new NamedXContentRegistry(namedXContent);
-    }
-
-    @Override
-    protected NamedWriteableRegistry writableRegistry() {
-        List<NamedWriteableRegistry.Entry> namedWriteables = new ArrayList<>(new MlInferenceNamedXContentProvider().getNamedWriteables());
-        namedWriteables.addAll(new MlLTRNamedXContentProvider().getNamedWriteables());
-        namedWriteables.addAll(new SearchModule(Settings.EMPTY, Collections.emptyList()).getNamedWriteables());
-        return new NamedWriteableRegistry(namedWriteables);
     }
 
     @Override
@@ -186,14 +154,20 @@ public class LearningToRankRescorerBuilderSerializationTests extends AbstractBWC
         return writableRegistry();
     }
 
-    private static Map<String, Object> randomParams() {
-        return randomMap(1, randomIntBetween(1, 10), () -> new Tuple<>(randomIdentifier(), randomIdentifier()));
+    @Override
+    protected NamedWriteableRegistry writableRegistry() {
+        List<NamedWriteableRegistry.Entry> namedWriteables = new ArrayList<>(new MlInferenceNamedXContentProvider().getNamedWriteables());
+        namedWriteables.addAll(new MlLTRNamedXContentProvider().getNamedWriteables());
+        namedWriteables.addAll(new SearchModule(Settings.EMPTY, List.of()).getNamedWriteables());
+        namedWriteables.add(new NamedWriteableRegistry.Entry(
+            RescorerBuilder.class,
+            LearningToRankRescorerBuilder.NAME.getPreferredName(),
+            in -> new LearningToRankRescorerBuilder(in, learningToRankService)
+        ));
+        return new NamedWriteableRegistry(namedWriteables);
     }
 
-    private static LocalModel localModelMock() {
-        LocalModel model = mock(LocalModel.class);
-        String modelId = randomIdentifier();
-        when(model.getModelId()).thenReturn(modelId);
-        return model;
+    private static Map<String, Object> randomParams() {
+        return randomMap(1, randomIntBetween(1, 10), () -> new Tuple<>(randomIdentifier(), randomIdentifier()));
     }
 }
